--- a/style2.css
+++ b/style2.css
@@ -38,7 +38,7 @@ section {
     max-width: 1000px;
     margin: 20px auto;
     padding: 20px;
-    background: peru;
+    background: rgb(190, 28, 160);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
