--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     color: beige;
 }
 header{
-    background-color: blue;
+    background-color: pink;
     color: black;
     text-align: center;
     padding:20px 0;
@@ -39,3 +39,25 @@ footer {
    color: black;
    margin-top: 20px;
 }
+nav{
+    flex: 1;
+    text-align: right;
+}
+nav ul{
+    display: inline-block;
+    list-style-type: none;
+}
+nav ul li{
+    display: inline-block;
+    margin: 20px;
+}
+.logo{
+    text-align: center;
+    padding: 20px;
+}
+.col-1 img{
+    max-width: 100%;
+    padding: 50px 0;
+
+}
+
