--- a/static/css/style.css
+++ b/static/css/style.css
@@ -282,63 +282,6 @@ footer {
     
 }
 /* home page */
-<<<<<<< HEAD
-=======
-.home{
-    margin-top: 5rem;
-    
-}
-
-.collection-card{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-    display: flex;
-    gap: 2rem ;
-    flex-wrap: wrap;
-    margin-left: 10rem;
-}
-
-.card {
-    position: relative;
-    width: 400px;
-    height: 200px;
-    overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-}
-
-.card img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.3s ease;
-    
-
-}
-
-.card:hover img {
-    transform: scale(1.1);
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--commerce--color);
-    clip-path: polygon(0 0, 60% 0, 30% 100%, 0% 100%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-left: 20px;
-    color: white;
-    opacity: 70%;
-}
->>>>>>> 5655aaf823cfd9cf560d0f2562933c6a1651a770
 
 .overlay h2 {
     font-size: 20px;
@@ -424,7 +367,7 @@ footer {
     position: absolute;
     top: 10px;
     right: 10px;
-    background: red;
+    background: var(--commerce--color);
     color: white;
     font-size: 12px;
     padding: 5px 10px;
@@ -456,7 +399,7 @@ footer {
 }
 
 .new-price {
-    color: red;
+    color:  var(--commerce--color);
     font-weight: bold;
 }
 
@@ -494,7 +437,7 @@ footer {
 }
 
 .product-actions i:hover {
-    color: red;
+    color:  var(--commerce--color);
 }
 
 .countdown-card {
@@ -516,7 +459,7 @@ footer {
     display: inline-flex;
 }
 .time-box {
-    background: red;
+    background:  var(--commerce--color);
     color: white;
     padding: 15px;
     border-radius: 50%;
@@ -531,7 +474,7 @@ footer {
     color: #333;
 }
 .shop-now {
-    background: red;
+    background:  var(--commerce--color);
     color: white;
     padding: 10px 20px;
     border: none;
