--- a/static/css/style.css
+++ b/static/css/style.css
@@ -282,6 +282,60 @@ footer {
     
 }
 /* home page */
+.home{
+    margin-top: 5rem;
+    
+}
+
+.collection-card{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+    display: flex;
+    gap: 2rem ;
+    flex-wrap: wrap;
+    margin-left: 10rem;
+}
+
+.card {
+    position: relative;
+    width: 400px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+    
+
+}
+
+.card:hover img {
+    transform: scale(1.1);
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--commerce--color);
+    clip-path: polygon(0 0, 60% 0, 30% 100%, 0% 100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20px;
+    color: white;
+    opacity: 70%;
+}
 
 .overlay h2 {
     font-size: 20px;
