--- a/static/css/style.css
+++ b/static/css/style.css
@@ -610,4 +610,70 @@ footer {
     border-radius: 5px;
 }
 
+/* about page */
+.about-section {
+    
+    position: relative;
+    margin-top: 2rem;
+    text-align: center;
+}
 
+.about-section img {
+    width: 100%;
+    height: 700px; /* Adjust height as needed */
+    object-fit: cover;
+    display: block;
+}
+
+/* About Header */
+.about-header {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 100%;
+}
+
+.breadcrumb {
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.breadcrumb a {
+    color: var(--commerce--color); /* Gold color */
+    text-decoration: none;
+}
+
+.breadcrumb span {
+    color: #fff;
+}
+
+.about-header h1 {
+    font-size: 48px;
+    font-weight: bold;
+    color: white;
+    margin: 0;
+}
+.about-section .services{
+    
+    background-color: var(--commerce--color);
+    position: relative;
+    bottom: 10rem;
+    margin-bottom: 5rem;
+    width: auto;
+    height: 200px;
+    gap: 2rem;
+    display: flex;
+}
+
+.about-section .customer-service{
+    display: flex;
+
+}
+.about-section .customer-service i{
+    font-size: 5rem;
+    margin-right: 1rem;
+    color: white;
+}
