--- a/nova/templates/navheader.html
+++ b/nova/templates/navheader.html
@@ -4,9 +4,32 @@
         <ul>
             <li><a href="{% url 'nova:home' %}">Home</a></li>
             <li><a href="{% url 'nova:about' %}">About Us</a></li>
-            <li><a href="#">Product</a></li>
+            <li><a href="{% url 'nova:product' %}">Product</a></li>
             <li><a href="{% url 'nova:contact' %}">Contact</a></li>
         </ul>
     </nav>
+    {% comment %} <div class="icons-content">
+        <div class="authentication">
+            <i class="fas fa-user"></i>
+            <i class="fas fa-caret-down arrow"></i>
+            <div class="auth">
+                {% if user.is_authenticated %}
+                <a href="{% url 'nova:logout'%}">Logout</a>
+                {% else  %}
+                <a href="{% url 'nova:login'%}">Login</a>
+                <a href="{% url 'nova:signup'%}">Register</a>
+                {% endif %}
+            </div>
+        </div>
+        <div class="cart-icon">
+            <a href="{% url 'cart'%}">
+                <i class="fas fa-shopping-cart"></i>
+                <span class="cart-count">{{cart_count}}</span>
+            </a>
+            
+        </div>
+        
+        </div>
+    </div> {% endcomment %}
 </header>
 
